Fix bottom slideshow size and alignment

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2866,6 +2866,63 @@ form#user-login, form#user-pass {
   margin-bottom: 0;
   display: block; }
 
+.blog-type-page .pane-card-cycles-card-blog .view-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap; }
+  .blog-type-page .pane-card-cycles-card-blog .view-content .views-slideshow-cycle-main-frame-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap; }
+  .blog-type-page .pane-card-cycles-card-blog .view-content .views-row {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 30%;
+            flex: 1 30%;
+    margin: 0.5em;
+    padding: 0; }
+    @media (min-width: 375px) {
+      .blog-type-page .pane-card-cycles-card-blog .view-content .views-row {
+        min-width: 300px;
+        -webkit-box-flex: 1;
+            -ms-flex: 1 1 300px;
+                flex: 1 1 300px; } }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row .panel-display {
+      padding: 0; }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row .panel-flexible {
+      padding: 1em; }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row h2 {
+      margin: 0.5em 0 0 0;
+      text-align: center; }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row h3 {
+      margin: 0 0 0.5em 0;
+      text-align: center; }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row .col-1, .blog-type-page .pane-card-cycles-card-blog .view-content .views-row .col-2 {
+      width: 100%; }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row .col-1 {
+      padding: 1em;
+      text-align: center; }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row .col-2 {
+      padding: 0 1em 1em 1em; }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row .pane-node-field-card-image {
+      text-align: center; }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row .field--name-field-amazon-book-listing {
+      text-align: center; }
+    .blog-type-page .pane-card-cycles-card-blog .view-content .views-row .pane-node-field-call-to-action {
+      text-align: center; }
+
+.blog-type-page .pane-card-cycles-card-slideshow {
+  position: relative; }
+  .blog-type-page .pane-card-cycles-card-slideshow .col-1 {
+    width: 100%; }
+
 .blog-type-page .views-exposed-form .views-exposed-widget {
   display: inline-block;
   float: none;
@@ -3047,61 +3104,6 @@ form#user-login, form#user-pass {
         display: block;
         height: auto;
         margin: auto; }
-  .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap; }
-    .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-slideshow-cycle-main-frame-row {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-          -ms-flex-flow: row wrap;
-              flex-flow: row wrap; }
-    .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row {
-      -webkit-box-flex: 1;
-          -ms-flex: 1 30%;
-              flex: 1 30%;
-      margin: 0.5em;
-      padding: 0; }
-      @media (min-width: 375px) {
-        .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row {
-          min-width: 300px;
-          -webkit-box-flex: 1;
-              -ms-flex: 1 1 300px;
-                  flex: 1 1 300px; } }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row .panel-display {
-        padding: 0; }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row .panel-flexible {
-        padding: 1em; }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row h2 {
-        margin: 0.5em 0 0 0;
-        text-align: center; }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row h3 {
-        margin: 0 0 0.5em 0;
-        text-align: center; }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row .col-1, .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row .col-2 {
-        width: 100%; }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row .col-1 {
-        padding: 1em;
-        text-align: center; }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row .col-2 {
-        padding: 0 1em 1em 1em; }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row .pane-node-field-card-image {
-        text-align: center; }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row .field--name-field-amazon-book-listing {
-        text-align: center; }
-      .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-blog .view-content .views-row .pane-node-field-call-to-action {
-        text-align: center; }
-  .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-slideshow {
-    position: relative; }
-    .blog-type-page #main-content .panel-myriad-layout .pane-card-cycles-card-slideshow .col-1 {
-      width: 100%; }
   .blog-type-page #main-content .panel-myriad-layout .main-display {
     width: 100%; }
   .blog-type-page #main-content .panel-myriad-layout .main-display .view-content {
